--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"preview": "astro preview",
 		"astro": "astro"
 	},
+	"engines": {
+		"node": ">=18.14.1"
+	  },
 	"dependencies": {
 		"@astrojs/check": "^0.5.9",
 		"@astrojs/mdx": "^2.2.0",
@@ -20,6 +23,6 @@
 		"typescript": "^5.4.2"
 	},
 	"devDependencies": {
-		"prettier": "3.2.5"
+		"pettier": "3.2.5"
 	}
 }
