--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"astro": "astro"
 	},
 	"engines": {
-		"node": ">=18.14.1"
+		"node": "20.x"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.5.9",
