--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
 		"astro": "astro"
 	},
 	"engines": {
-		"node": "20.x"
+		"node": ">=20"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.5.9",
-		"@astrojs/mdx": "^2.2.0",
+		"@astrojs/mdx": "^4.3.13",
 		"@astrojs/rss": "^4.0.5",
 		"@astrojs/sitemap": "^3.1.1",
 		"@astrojs/tailwind": "^5.1.0",
-		"astro": "^4.5.3",
+		"astro": "^5.17.1",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2"
 	},
